# pkroam

./: Cargo.toml  README.md
pkroam/: Cargo.toml
pkroam-backend/: Cargo.toml
pkroam-backend/src/: app_paths.rs  cli_handlers.rs  lib.rs  logging.rs  types.rs
pkroam-backend/src/database/: internal_types.rs  migrations.rs  mod.rs  statements.rs  types.rs
pkroam/src/: save.rs
pkroam/src/pk3/: mod.rs  species.rs
pkroam_app/: Cargo.toml
pkroam_app/src/: app.rs  app_paths.rs  logging.rs  main.rs  types.rs
pkroam_app/src/database/: mod.rs  statements.rs
pkroam_app/src/ui/: mod.rs  states.rs
pkroam_lib/: Cargo.toml
pkroam_lib/src/: lib.rs  pokemon.rs  save.rs
pkroam_lib/src/pk3/: species.rs
pktools/: Cargo.toml
pktools/src/: extract.rs  insert.rs  inspect.rs  lib.rs
pktools/tests/: extract_tests.rs
pktools/tests/data/: emerald.sav  emerald2.sav  ruby-with-treecko.sav  treecko.pk3  wurmple.pk3
src/: lib.rs  pokemon.rs  save.rs
src/pk3/: mod.rs
