[package]
name = "pkroam-backend"
version = "0.1.0"
description = "Application for editing Pokemon saves."
authors = ["ssnover <ssnover95@gmail.com>"]
edition = "2021"

[[bin]]
name = "pkroam-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1" }
clap = { version = "4.3", features = ["derive"], optional = true }
directories = "5.0"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pkroam = { path = "../pkroam" }
prettytable = { version = "0.10", optional = true }
rusqlite = { version = "0.29", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0"

[features]
cli = ["clap", "prettytable"]