[package]
name = "pkroam_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pkroam"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
directories = "5.0"
log = "0.4"
pkroam = { path = "../pkroam_lib" }
rusqlite = { version = "0.29", features = ["bundled"] }
simple-logging = "2.0"
