[package]
name = "pkroam_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pkroam"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
crossterm = "0.25"
directories = "5.0"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pkroam = { path = "../pkroam_lib" }
ratatui = { version = "0.22", features = ["all-widgets", "crossterm"] }
rusqlite = { version = "0.29", features = ["bundled"] }
simple-logging = "2.0"
unicode-width = "0.1"
